update file names

--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -505,7 +505,7 @@ Next we want to add some content to our \_README.md. The purpose of this documen
   A brief description of file naming conventions used within the directory
 \end{itemize}
 
-To see an example root directory readme file click \href{files/_rootREADME.md}{here}.
+To see an example root directory readme file click \href{files/rootREADME.md}{here}.
 
 \hypertarget{data-directory-readme}{%
 \section{Data directory readme}\label{data-directory-readme}}
@@ -528,7 +528,7 @@ The purpose of this readme file is to provide a description of data collection m
   A brief description of where the data was collected
 \end{itemize}
 
-To see an example data directory readme file click \href{files/_dataREADME.md}{here}.
+To see an example data directory readme file click \href{files/dataREADME.md}{here}.
 
 \hypertarget{data-dictionary}{%
 \section{Data dictionary}\label{data-dictionary}}
@@ -551,7 +551,7 @@ A data dictionary helps others understand the meaning of each element in your da
   When describing variables you need to provide the full names and definitions of each variable because often variables are abbreviated in datasets
 \end{itemize}
 
-To see an example data dictionary click \href{files/_DATA-DICTIONARY.md}{here}.
+To see an example data dictionary click \href{files/DATA-DICTIONARY.md}{here}.
 
 \hypertarget{example-biol-116}{%
 \section{Example BIOL 116}\label{example-biol-116}}
