--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -6,7 +6,7 @@
 ]{book}
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2021-07-15}
+\date{2021-07-19}
 
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
@@ -505,7 +505,7 @@ Next we want to add some content to our \_README.md. The purpose of this documen
   A brief description of file naming conventions used within the directory
 \end{itemize}
 
-To see an example root directory readme file click \href{files/rootREADME.md}{here}.
+To see an example root directory readme file click \href{files/DS_rootREADME.md}{here}.
 
 \hypertarget{data-directory-readme}{%
 \section{Data directory readme}\label{data-directory-readme}}
@@ -528,7 +528,7 @@ The purpose of this readme file is to provide a description of data collection m
   A brief description of where the data was collected
 \end{itemize}
 
-To see an example data directory readme file click \href{files/dataREADME.md}{here}.
+To see an example data directory readme file click \href{files/DS_dataREADME.md}{here}.
 
 \hypertarget{data-dictionary}{%
 \section{Data dictionary}\label{data-dictionary}}
@@ -551,7 +551,7 @@ A data dictionary helps others understand the meaning of each element in your da
   When describing variables you need to provide the full names and definitions of each variable because often variables are abbreviated in datasets
 \end{itemize}
 
-To see an example data dictionary click \href{files/DATA-DICTIONARY.md}{here}.
+To see an example data dictionary click \href{files/DS_DATA-DICTIONARY.md}{here}.
 
 \hypertarget{example-biol-116}{%
 \section{Example BIOL 116}\label{example-biol-116}}
@@ -645,6 +645,8 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 
 And finally a screenshot from our desktop file manager\ldots{}
 
+\includegraphics{images/DS_biol116-directory-example.png}
+
 \hypertarget{example-biol-125}{%
 \section{Example BIOL 125}\label{example-biol-125}}
 
@@ -662,7 +664,7 @@ BIOL125MealwormProject/
 
 Within our root folder we create a \_README.md file to describe our directory structure. Let's add our project name, date the folder was created and who created it, a short description of the project, group member names, file structure (major folders and their proposed content), and naming conventions to this readme file. Your file should look something like this:
 
-\href{files/biol-125-readme_V0.md}{\_README.md}
+\href{files/DS_biol-125-readme_V0.md}{\_README.md}
 
 Since we have just started our project, there won't be files in most subfolders we create. However, it's good to have the skeleton of what we want our directory to look like so everyone in the group places new files in the correct location. Later, if needed, we can modify our directory structure and update our readme file to reflect those changes.
 
@@ -675,6 +677,8 @@ Pither_BIOL125MealwormProject_report_V0.docx
 \end{verbatim}
 
 Here is what our project directory looks like so far:
+
+\includegraphics{images/DS_directory-example-1.png}
 
 \hypertarget{day-2-1}{%
 \subsection*{Day 2}\label{day-2-1}}
@@ -692,13 +696,15 @@ Since we have added our first dataset into our project folder, we need to create
 
 Let's start by creating the data directory readme and provide a description of our data set, collection methods, who collected the data, and where it was collected. It should look something like this:
 
-\href{files/biol-125-data-readme_V0.md}{\_README.md}
+\href{files/DS_biol-125-data-readme_V0.md}{\_README.md}
 
 Next, let's create a data dictionary for our new dataset. It should look something like this:
 
-\href{files/biol-125-data-dictionary_V0.md}{\_DATA-DICTIONARY.md}
+\href{files/DS_biol-125-data-dictionary_V0.md}{\_DATA-DICTIONARY.md}
 
 Now our project directory looks like this:
+
+\includegraphics{images/DS_directory-example-2.png}
 
 \hypertarget{day-3}{%
 \subsection*{Day 3}\label{day-3}}
@@ -715,17 +721,17 @@ Pither_20210916_BIOL125MealwormProject_distance-data.csv
 
 Since we have a new dataset we'll have to update our data directory readme file with a description of the new dataset. Remember to note down the date it was updated and who it was updated by. Our updated data directory \_README.md file should look something like this:
 
-\href{files/biol-125-data-readme_V1.md}{\_README.md}
+\href{files/DS_biol-125-data-readme_V1.md}{\_README.md}
 
 Now our updated data directory readme file includes descriptions for both datasets.
 
 In the interest of organization, let's keep our food preferences and distance data in their own subfolders. So, we'll create two new subfolders within the Data folder. We'll call one Food-preferences/ and the other Distance/. This way we can organize csv files into the folder for the corresponding dataset. After doing this, we need to update the \_README.md in our root folder, since we've modified our directory structure. This readme should now look something like this:
 
-\href{files/biol-125-readme_V1.md}{\_README.md}
+\href{files/DS_biol-125-readme_V1.md}{\_README.md}
 
 Next, let's also create a data dictionary for our new dataset within our distance subfolder. Remember to note down the date it was updated and who it was updated by. It should look something like this:
 
-\href{files/biol-125-data-dictionary-distance_V0.md}{\_DATA-DICTIONARY.md}
+\href{files/DS_biol-125-data-dictionary-distance_V0.md}{\_DATA-DICTIONARY.md}
 
 Since we made some updates to our project design and methods, I'll also go ahead and updated our lab report to reflect those changes alongside justification for the changes. Then, I'll be sure to save my updated lab report using the appropriate naming conventions.
 
@@ -734,6 +740,8 @@ Pither_BIOL125MealwormProject_report_V1.docx
 \end{verbatim}
 
 Now our project directory looks like:
+
+\includegraphics{images/DS_directory-example-3.png}
 
 \hypertarget{day-4-5}{%
 \subsection*{Day 4-5}\label{day-4-5}}
@@ -758,6 +766,8 @@ Next, we'll save our analysis into the Analysis/ subfolder and the figures into 
 
 Now our project directory looks like:
 
+\includegraphics{images/DS_directory-example-4.png}
+
 \hypertarget{day-6-1}{%
 \subsection*{Day 6}\label{day-6-1}}
 \addcontentsline{toc}{subsection}{Day 6}
@@ -771,6 +781,8 @@ Pither_BIOL125MealwormProject_report_V2.docx
 \end{verbatim}
 
 Our final directory looks like this:
+
+\includegraphics{images/DS_directory-example-5.png}
 
 We can start to see that if you were to share your entire project directory with another person it would be relatively easy for them to locate files and understand the meaning behind each document in our project. They would also know when changes were made and who made these changes, so if they had any questions, they'd know exactly who to ask!
 
@@ -963,6 +975,243 @@ Ellison-lake & 2 & 5 \\
 Ellison-lake & 3 & 1 \\
 \bottomrule
 \end{longtable}
+
+\hypertarget{part-data-presentation}{%
+\part*{Data Presentation}\label{part-data-presentation}}
+\addcontentsline{toc}{part}{Data Presentation}
+
+\hypertarget{figures-and-tables}{%
+\chapter{Figures and Tables}\label{figures-and-tables}}
+
+These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. They aim to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
+
+\hypertarget{tables}{%
+\section{Tables}\label{tables}}
+
+When presenting data in a table keep in mind the following:
+
+\begin{itemize}
+\tightlist
+\item
+  The heading is placed above the table.
+\item
+  The table should be interpretable as a stand alone object using an informative heading and judicious footnotes
+\item
+  Sample sizes and units are always included
+\item
+  Use horizontal lines only; these are often placed above and below headings, and at bottom of table
+\end{itemize}
+
+\hypertarget{example}{%
+\subsection*{Example}\label{example}}
+\addcontentsline{toc}{subsection}{Example}
+
+The following is an example of a properly formatted table
+
+\textbf{Table 1.} Summary of trait measurements made on individuals of \emph{Solidago} ssp. collected within shaded and open habitats in the vicinity of Portland, Oregon.
+
+Trait
+
+Habitat: Shaded (n = 20)
+
+Habitat: Open (n+ = 18)
+
+Mean (sd)
+
+95\% confidence limit
+
+Mean (sd)
+
+95\% confidence limit
+
+Leaf area (cm2)
+
+4.59 (0.974)
+
+4.14, 5.05
+
+4.54 (0.972)
+
+4.24, 5.15
+
+Leaf mass (mg)
+
+2.52 (0.765)
+
+2.15, 2.89
+
+w.62 (0.705)
+
+2.25, 2.99
+
+Root mass (mg)
+
+9.97 (2.754)
+
+8.67, 11.26
+
+9.90 (2.454)
+
+8.37, 11.16
+
++ data for two individuals misplaced
+
+\hypertarget{descriptive-summary-statistics}{%
+\section{Descriptive / summary statistics}\label{descriptive-summary-statistics}}
+
+Here are some general guidelines to follow when displaying descriptive or summary statistics:
+
+\begin{itemize}
+\tightlist
+\item
+  Round numbers to one more digit for measures of centre (e.g.~mean), and 2 more digits for measures of spread (e.g.~sd) than was used in measuring the data
+
+  \begin{itemize}
+  \tightlist
+  \item
+    For detailed guidelines about significant digits, consult the following webpage: \url{https://www.physics.uoguelph.ca/significant-digits-tutorial}
+  \end{itemize}
+\item
+  Units are preceded by a space within text passages:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    e.g.~"Average height was 34.2 cm (± 3.43 SEM)."
+  \end{itemize}
+\end{itemize}
+
+\textbf{Describing Numerical Variables}
+
+\begin{itemize}
+\tightlist
+\item
+  Report mean with standard deviation, and additionally median with inter-quartile range for variables that exhibit a non-normal frequency distribution (e.g.~is skewed) or that includes outliers
+\item
+  Parameter estimates (i.e.~mean) should be accompanied by measures of uncertainty, i.e.~the \emph{standard error of the mean} (SEM) or confidence \emph{interval} (notation: lower limit -- upper limit); confidence \emph{limits}: (lower limit, upper limit)
+\item
+  Confidence intervals are strongly encouraged because they inform about \emph{effect size}
+\item
+  Measures of uncertainty for an estimate, such as SEM, can be preceded by a ± sign; do not make the common mistake of reporting a ± sign with a standard deviation, as it is not a measure of uncertainty in an estimate
+\end{itemize}
+
+\textbf{Describing Categorical Variables}
+
+\begin{itemize}
+\tightlist
+\item
+  Report a frequency table (raw data) or a summary table with proportions for categories (the main descriptive statistic of interest), along with the confidence interval for the proportion if appropriate
+\end{itemize}
+
+\hypertarget{example-1}{%
+\subsection*{Example}\label{example-1}}
+\addcontentsline{toc}{subsection}{Example}
+
+\textbf{Table 2.} Descriptive statistics for an experiment investigating the effect of different protein diets on growth of chicks since birth. Chicks were weighed at birth and every second day after that until day 20. For more information on this dataset click \href{https://www.rdocumentation.org/packages/datasets/versions/3.6.2/topics/ChickWeight}{here.}
+
+\begin{longtable}[]{@{}lllll@{}}
+\toprule
+Variable & n & \% & Mean & SD \\
+\midrule
+\endhead
+Diet 1 Diet 2 Diet 3 Diet 4 & 220 120 120 118 & 38.1 20.8 20.8 20.4 & & \\
+Weight (gm) & 578 & & 121.8 & 71.10 \\
+Time (days) & 578 & & 10.7 & 6.76 \\
+\bottomrule
+\end{longtable}
+
+\hypertarget{results-of-statistical-tests}{%
+\section{Results of Statistical Tests}\label{results-of-statistical-tests}}
+
+Here are some guidelines for reporting the results of statistical tests:
+
+\begin{itemize}
+\tightlist
+\item
+  Your \emph{Methods} section should clearly state the significance level (α), and this should be decided prior to the study
+\item
+  Test statistics (e.g.~Student's \emph{t} or an "F" from ANOVA) should be rounded to 2 decimal places, and associated \emph{P}-values should report 3 decimal places, or if smaller than 0.001, then \textless0.001. \emph{P}-values do not indicate effect size, so reporting \emph{P} = 10\^{}-6 is not more impressive than \emph{P} \textless0.001
+\item
+  Concluding statements should, in the absence of a table, include the test, test statistic value, degrees of freedom (\emph{df}) or sample sizes, \emph{P}-value, and confidence interval (if appropriate) in parentheses.
+
+  \begin{itemize}
+  \tightlist
+  \item
+    For example: "On average, hair loss was significantly greater among fathers compared to childless men (Welch's 2-sample \emph{t}-test; \emph{t} = 4.23; \emph{n} F = 18, \emph{n} C = 20; \emph{P} = 0.018; 95\% CI for difference: 9.34 -- 18.22\%)."\\
+  \end{itemize}
+\item
+  Regression and ANOVA results should be shown in a standard ANOVA table format
+\end{itemize}
+
+\textbf{Example of ANOVA table format}
+
+\textbf{Table 3.}
+
+\begin{longtable}[]{@{}llllll@{}}
+\toprule
+& SS & df & MS & F & P \\
+\midrule
+\endhead
+Treatment & 7.224 & 2 & 3.6122 & 7.29 & 0.004 \\
+Error & 9.415 & 19 & 0.4955 & & \\
+Total & 16.640 & 21 & 4.1078 & & \\
+\bottomrule
+\end{longtable}
+
+\hypertarget{figures}{%
+\section{Figures}\label{figures}}
+
+When displaying data using a figure, follow these guidelines:
+
+\begin{itemize}
+\tightlist
+\item
+  The figure heading should be placed below the graph and should provide sufficient information so the figure can be interpreted on its own
+\item
+  The heading can include statistical statements (Fig. 1) or simply describe what is being shown (Fig. 2)
+\item
+  Sample size(s) must be reported
+\item
+  The first time a particular type of graph is shown (e.g.~boxplot), details of graph features must be provided. Subsequent figures of the same type can refer to the first for details. See Fig. 2 for an example
+\item
+  Use hollow symbols so that overlapping points can be seen (Fig. 3)
+\item
+  Orient all text horizontal (except \emph{y}-axis label), including all tick labels
+\item
+  Place axis tick marks outside of figure border to avoid overlapping with observations
+\item
+  Data points should not touch the axes
+\item
+  Fitted lines (e.g.~least-squares regression) included in figures should be fully explained in the heading,
+
+  \begin{itemize}
+  \tightlist
+  \item
+    e.g.~``Line represents a least-squares linear regression line, \emph{y} = 0.3 + 4.5\emph{x} (\emph{F} = 5.65, df = 36; P = 0.021)''.
+  \end{itemize}
+\item
+  For more complex statistics (e.g.~lines associated with mixed effects models) refer the reader to the text for details
+\item
+  Bar plots should \textbf{only} be used to visualize categorical data (e.g.~proportion of students with brown or blue eyes) or counts (number of flies on scat)
+\item
+  When comparing numerical data among categories or groups (Figs. 1,2) use stripcharts (Fig. 1) when sample sizes are small (i.e.~\textless20) and boxplots otherwise (Fig. 2)
+\end{itemize}
+
+\hypertarget{examples}{%
+\subsection*{Examples}\label{examples}}
+\addcontentsline{toc}{subsection}{Examples}
+
+\includegraphics{images/FT_fig-1.png}
+
+\textbf{Figure 1.} Aggression was significantly higher among isolated ants (\emph{n} = 8) compared to the control group (\emph{n} = 6) (see text for details). Shown are individual observations (grey circles), group means (solid circles) with +/- 1 SEM.
+
+\includegraphics{images/FT_fig-2.png}
+
+\textbf{Figure 2.} Height of male (\emph{n} = 64) and female (\emph{n} = 90) students within BIOL202. Thick horizontal lines represent group medians, large circles represent group means, boxes delimit 1st to 3rd quartiles, whiskers extend to 1.5 x IQR, and small circles represent extreme observations.
+
+\includegraphics{images/FT_fig-3.png}
+
+\textbf{Figure 3}. Head circumference versus height for \emph{n} = 150 BIOL202 students. The positive association is highly significant (Pearson \emph{r} = 0.82; \emph{P} \textless{} 0.001).
 
 \hypertarget{part-glossary}{%
 \part*{Glossary}\label{part-glossary}}
